--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-h6 {
+/* h6 {
   margin-bottom: 0;
   padding-bottom: 0;
 }
@@ -169,7 +169,7 @@ h6 {
   -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
   color: #fff
-}
+} */
 
 footer h6{
   color:#4f4f4f;
